[gd_scene load_steps=6 format=3 uid="uid://0kgd4s5iyrq5"]

[ext_resource type="Script" uid="uid://dgxiu7ifv5ygb" path="res://Scripts/node_2d.gd" id="1_he4j0"]
[ext_resource type="PackedScene" uid="uid://m40ipaj6nvlt" path="res://Scenes/game.tscn" id="2_6whob"]
[ext_resource type="Script" uid="uid://cgi64gamjymos" path="res://Scripts/sub_viewport2.gd" id="5_u7krg"]
[ext_resource type="Script" uid="uid://b2xyob8t3vw2k" path="res://Scripts/sub_viewport.gd" id="25_jiy1d"]
[ext_resource type="Script" uid="uid://ddqhir45djrqv" path="res://Scripts/panel.gd" id="26_ud1os"]

[node name="Node2D" type="Node2D"]
position = Vector2(-200, 0)
script = ExtResource("1_he4j0")

[node name="Multiplayer Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="Multiplayer Control"]
layout_mode = 0
offset_left = 2594.0
offset_right = 3082.0
offset_bottom = 345.0
script = ExtResource("26_ud1os")

[node name="Button" type="Button" parent="Multiplayer Control/Panel"]
layout_mode = 0
offset_left = 177.0
offset_top = 47.0
offset_right = 308.0
offset_bottom = 105.0
text = "Host"

[node name="Button2" type="Button" parent="Multiplayer Control/Panel"]
layout_mode = 0
offset_left = 176.0
offset_top = 162.0
offset_right = 310.0
offset_bottom = 215.0
text = "Connect"

[node name="Camera2D" type="Camera2D" parent="Multiplayer Control/Panel"]
position = Vector2(261, 173)
zoom = Vector2(2, 2)

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="Multiplayer Control"]

[node name="LineEdit" type="LineEdit" parent="Multiplayer Control"]
layout_mode = 0
offset_left = 2761.0
offset_top = 251.0
offset_right = 2829.56
offset_bottom = 282.0
scale = Vector2(2.47825, 1.04473)

[node name="Label" type="Label" parent="Multiplayer Control/LineEdit"]
texture_filter = 1
layout_mode = 0
offset_left = -12.5088
offset_top = -7.65752
offset_right = 27.4912
offset_bottom = 20.3425
scale = Vector2(0.448654, 1.48169)
theme_override_font_sizes/font_size = 20
text = "IP:"

[node name="ShopCamera" type="Camera2D" parent="."]
position = Vector2(1975, 373)
enabled = false

[node name="MainCamera" type="Camera2D" parent="."]
position = Vector2(625, 425)
enabled = false

[node name="CarShopCamera" type="Camera2D" parent="."]
position = Vector2(-1644, 425)
enabled = false

[node name="CameraCar" type="Camera2D" parent="."]
position = Vector2(-514, 410)
enabled = false
zoom = Vector2(1, 1.02)

[node name="SubViewportContainer" type="SubViewportContainer" parent="CameraCar"]
texture_filter = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -469.0
offset_top = 53.0
offset_right = 470.0
offset_bottom = 471.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(0, 475)

[node name="SubViewport" type="SubViewport" parent="CameraCar/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(939, 418)
size_2d_override_stretch = true
render_target_update_mode = 4
script = ExtResource("25_jiy1d")

[node name="Camera2D" type="Camera2D" parent="CameraCar/SubViewportContainer/SubViewport"]
position = Vector2(425, 691)

[node name="Game" parent="." instance=ExtResource("2_6whob")]

[node name="Multiplayer Viewport" type="Node2D" parent="."]
visible = false
texture_filter = 3

[node name="SubViewportContainer" type="SubViewportContainer" parent="Multiplayer Viewport"]
texture_filter = 3
offset_left = -865.0
offset_top = 77.0
offset_right = -29.0
offset_bottom = 788.0

[node name="SubViewport" type="SubViewport" parent="Multiplayer Viewport/SubViewportContainer"]
handle_input_locally = false
render_target_update_mode = 0
script = ExtResource("5_u7krg")

[connection signal="pressed" from="Multiplayer Control/Panel/Button" to="Multiplayer Control/Panel" method="_on_button_pressed"]
[connection signal="pressed" from="Multiplayer Control/Panel/Button2" to="Multiplayer Control/Panel" method="_on_button_2_pressed"]
